--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~3.0,>=3.0.12",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+
+      "components/jquery": "1.11.1",
+      "twitter/bootstrap": "3.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
@@ -57,4 +60,7 @@
             "file": "app/config/parameters.yml"
         }
     }
+
+
+
 }
