--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,7 +1,7 @@
 # This file is a "template" of what your parameters.yml file should look like
 parameters:
     database_driver:   pdo_mysql
-    database_host:     127.0.0.1
+    database_host:     mysql://b9b805f8c722c3:84a8e0e5@us-cdbr-iron-east-02.cleardb.net/heroku_173bb752a93445f?reconnect=true
     database_port:     ~
     database_name:     s2_module
     database_user:     root
