--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "sensio/distribution-bundle": "~3.0,>=3.0.12",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-
+        "doctrine/doctrine-fixtures-bundle": "2.2.*",
+      "friendsofsymfony/user-bundle": "~1.3",
       "components/jquery": "1.11.1",
       "twitter/bootstrap": "3.*"
 
